--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -110,7 +110,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.11.0</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
