--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Base de datos
 spring.application.name=andaluciasckills
-spring.datasource.url=jdbc:mysql://localhost:3306/andaluciaskills
+spring.datasource.url=jdbc:mysql://mysql:3306/andaluciaskills
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
