--- a/deployment/backend-deployment.yaml
+++ b/deployment/backend-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend
   labels:
     app: backend
-    version: v6
+    version: v3
 spec:
   replicas: 1
   selector:
@@ -19,24 +19,14 @@ spec:
     metadata:
       labels:
         app: backend
-        version: "v6"
+        version: "v3"
     spec:
-      initContainers:
-      - name: wait-for-mysql
-        image: busybox:1.28
-        command: ['sh', '-c', 'until nc -z mysql 3306; do echo waiting for mysql; sleep 10; done;']
       containers:
       - name: backend
-        image: alejandropm205/andaluciaskills-backend:v6
+        image: alejandropm205/andaluciaskills-backend:v3
         ports:
         - containerPort: 9000
-        resources:
-          limits:
-            cpu: "1"
-            memory: "1Gi"
-          requests:
-            cpu: "0.5"
-            memory: "512Mi"
+        
         env:
         - name: SPRING_DATASOURCE_URL
           value: "jdbc:mysql://mysql:3306/andaluciaskills?allowPublicKeyRetrieval=true&useSSL=false"
@@ -46,6 +36,13 @@ spec:
           value: "root"
         - name: SPRING_JPA_HIBERNATE_DDL_AUTO
           value: "update"
+        - name: SPRINGDOC_SWAGGER_UI_ENABLED
+          value: "true"
+        - name: SPRINGDOC_API_DOCS_PATH
+          value: "/v3/api-docs"
+        - name: SPRINGDOC_SWAGGER_UI_PATH
+          value: "/swagger-ui.html"
+
 ---
 apiVersion: v1
 kind: Service
