--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -3,27 +3,29 @@ kind: Ingress
 metadata:
   name: andaluciaskills-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
 spec:
   ingressClassName: nginx
   rules:
   - host: andaluciaskills.local
     http:
       paths:
-      - path: /api/?(.*)
+      - path: /api
         pathType: Prefix
         backend:
           service:
             name: backend
-            port:
+            port: 
               number: 9000
-      - path: /?(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: frontend
-            port:
+            port: 
               number: 80
 
 
